tests/stacks/ibm/application/oidc-authservice-appid/test_data/expected/apps_v1_statefulset_authservice.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/name: oidc-authservice
  name: authservice
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
      app.kubernetes.io/component: oidc-authservice
      app.kubernetes.io/name: oidc-authservice
  serviceName: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice
        app.kubernetes.io/component: oidc-authservice
        app.kubernetes.io/name: oidc-authservice
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          value: kubeflow-userid
        - name: USERID_PREFIX
          value: ""
        - name: USERID_CLAIM
          value: email
        - name: OIDC_PROVIDER
          valueFrom:
            secretKeyRef:
              key: oAuthServerUrl
              name: appid-application-configuration
        - name: OIDC_AUTH_URL
          value: ""
        - name: OIDC_SCOPES
          value: profile email groups
        - name: REDIRECT_URL
          valueFrom:
            secretKeyRef:
              key: oidcRedirectUrl
              name: appid-application-configuration
        - name: SKIP_AUTH_URI
          value: ""
        - name: PORT
          value: "8080"
        - name: CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: clientId
              name: appid-application-configuration
        - name: CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: appid-application-configuration
        - name: STORE_PATH
          value: /var/lib/authservice/data.db
        image: uhub.service.ucloud.cn/a4x-kubeflow/arrikto/kubeflow/oidc-authservice:28c59ef
        imagePullPolicy: Always
        name: authservice
        ports:
        - containerPort: 8080
          name: http-api
        readinessProbe:
          httpGet:
            path: /
            port: 8081
        volumeMounts:
        - mountPath: /var/lib/authservice
          name: data
      securityContext:
        fsGroup: 111
      serviceAccountName: oidc-authservice-service-account
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: authservice-pvc
