tests/stacks/ibm/application/oidc-authservice-appid/test_data/expected/networking.istio.io_v1alpha3_virtualservice_authservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/name: oidc-authservice
  name: authservice
  namespace: istio-system
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /login
    route:
    - destination:
        host: authservice.istio-system.svc.cluster.local
        port:
          number: 8080
